# cva6-cheri-sw

./: .gitignore  README.md  pyproject.toml
cheridemo/: __init__.py  boot.py  build.py  cli.py  config.py  fpga.py  sdcard.py  sw.py  toolchain.py  utils.py
configs/: cva6_configs.yaml  repos copy 2.yaml  repos copy.yaml  repos.yaml  sdk_profiles.yaml  software_targets.yaml
docs/: 01-overview.md  02-quickstart.md  03-boot-chains.md
